fix some alignment

--- a/Module35/Multi-Page-website/about/about.css
+++ b/Module35/Multi-Page-website/about/about.css
@@ -45,7 +45,7 @@ body {
     width: 80%;
     margin: 0 auto;
     gap: 22px;
-    padding-top: 13%;
+    padding-top: 12%;
 }
 .hero-section h1{
     font-weight: 900;
@@ -59,7 +59,8 @@ body {
     color: black;
     font-size: 19px;
     font-weight:400;
-    line-height: 20px;
+    padding-top: 10px;
+    /* line-height: 20px; */
 }
 .cards{
     display: flex;
@@ -69,7 +70,7 @@ body {
     padding-top: 20px;
 }
 .card{
-    border: 1px solid rgb(63, 60, 60);
+    border:transparent rgb(63, 60, 60);
     border-radius: 15px;
     padding: 20px 40px;
     display: flex;
@@ -77,7 +78,7 @@ body {
     align-items: center;
     text-align: center;
     justify-content: center;
-    line-height: 22px;
+    /* line-height: 22px; */
     box-shadow: 3px 3px 4px rgb(105, 102, 102) , -3px -3px 4px rgb(105, 102, 102);
 }
 .card p span{
@@ -92,5 +93,5 @@ body {
 }
 .card:hover{
     scale: 1.08;
-    transition: 0.8s;
+    transition: 0.7s;
 }
